fix esm loading in html

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <div>See Console!</div>
-<script src="main.js"></script>
+<script type="module">
+  import "./main.js";
+</script>
+
 </body>
 </html>
