shorten module syntax

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <div>See Console!</div>
-<script type="module">
-  import "./main.js";
-</script>
+<script type="module" src="./main.js"></script>
 
 </body>
 </html>
